
AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = \
arena.h \
casting.h \
chaos.h \
chaos_sprites.h \
cmdline.h \
computer.h \
creature.h \
editname.h \
examine.h \
gamemenu.h \
getopt.h \
gfx.h \
input.h \
lobby.h \
magic.h \
movement.h \
network.h \
options.h \
platform.h \
players.h \
remote.h \
sound_data.h \
spelldata.h \
spellselect.h \
splash.h \
text16.h \
version.h \
winkeys.h \
winsound.h \
wizards.h \
wmhandler.h 

